# RedHawk

./: .dockerignore  .env.example  .gitignore  .gitignore.bak  README.md  docker-compose.yml  start.bat
Backend/: .dockerignore  .gitignore  Dockerfile  README.md  app.js  assistant_response.html  assistant_response.md  fetch_chats.js  markdown_assistant_demo.js  markdown_demo.js  markdown_output.html  markdown_parser_demo.js  markdown_structure_demo.js  package-lock.json  package.json  parsed_structure.json  parser_output.md  pnpm-lock.yaml  run_analysis.py  server.js  structure_output.md  test_api.py  test_assistant.py  test_assistant_with_api.py  test_chatbot.js  test_db_connection.js  test_frontend.py  test_log_analysis.js  test_quick.js  test_url_scan.js
Backend/AI/: best_model.pkl  log_analysis_pipeline.py  log_analysis_pipeline_adapter.py  log_summary_generator.py  pyproject.toml  redhawk_assistant.py  requirements.txt  run_test.ps1  run_test.sh  run_test_simple.ps1  sample_predictions.csv  sample_summary.json  url_scan.py
Backend/Backend/AI/: TEST_README.md  log_analysis_pipeline.py  pyproject.toml  redhawk_assistant.py  test_adapted_log_summary.py  test_log_summary.py
Backend/Node/: package.json
Backend/config/: db.js
Backend/controllers/: aiBriefingController.js  authController.js  chatController.js  logAnalyzerController.js  (+1 more)
frontend/: .dockerignore  .gitignore  Dockerfile  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
uploads/: clean_log.csv  clean_summary.json  summary.json
(+115 files in other folders)
