[tool.poetry]
name = "redhawk-ai"
version = "0.1.0"
description = "RedHawk AI components for security log analysis"
authors = ["RedHawk Team"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"
openai = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
